css/custom.css
html {
    overflow-y: scroll;
    overflow-x: hidden;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    text-rendering: optimizeLegibility;
}

h1, h2, h3, h4, h5, h6{
    font-family: 'Oswald', sans-serif;
    font-weight: 700;
}

.btn, .nav-link {
    text-transform: uppercase;
}

.btn-link {
    font-weight: 500;
}

.fw-100 { font-weight: 100; }
.fw-200 { font-weight: 200; }
.fw-300 { font-weight: 300; }
.fw-400 { font-weight: 400; }
.fw-500 { font-weight: 500; }
.fw-600 { font-weight: 600; }
.fw-700 { font-weight: 700; }
.fw-800 { font-weight: 800; }
.fw-900 { font-weight: 900; }

.font-lato {
    font-family: 'Lato', sans-serif;
}

footer {
    background-color: #191919;
}

header, .navbar {
    z-index: 9;
}

.navbar-toggler:focus {
        outline: none;
        border: none;
        box-shadow: none;
}

.map-responsive{
    overflow:hidden;
    padding-bottom:56.25%;
    position:relative;
    height:0;
}

.map-responsive iframe{
    left:0;
    top:0;
    height:100%;
    width:100%;
    position:absolute;
}

.header-fix {
    padding-top: 105px;
}

.hero-title {
    font-size: 2.75rem;
}

.logo-header {
    width: 100px;
    height: auto;
}

.logo-azmgcs {
    width: 90px;
    height: auto;
}

.logo-footer {
    width: 180px;
    height: auto;
}

.section-large {
    min-height: 600px;
}

.gallery-item {
    min-height: 280px;
}

.fs-12 {
    font-size: 12px;
}

.bg-cover {
    background-size: cover;
}

.bg-center-center {
    background-position: center center;
}

.bg-animated {
    background: linear-gradient(-45deg, #253241, #30455d, #2b5a90, #12355d);
    background-size: 400% 400%;
    animation: gradient 15s ease infinite;
}

.hero-container {
    z-index: 1;
}

.bg-slash {
    overflow: hidden;
    position: absolute;
    left: 0;
    width: 100%;
    pointer-events: none;
    height: 55%;
    bottom: -1px;
}

.bg-slash svg {
    width: calc(100% + 2px);
    height: 100%;
}

.bg-slash-fill {
    fill: #ffffff !important;
}

.bg-large {
    min-height: 420px;
}

.bg-feature {
    min-height: 295px;
}

@keyframes gradient {
    0% {
        background-position: 0% 50%;
    }
    50% {
        background-position: 100% 50%;
    }
    100% {
        background-position: 0% 50%;
    }
}

.service-icon {
    width: 68px;
    height: 68px;
}

/* Timeline holder */
ul.timeline {
    list-style-type: none;
    position: relative;
    padding-left: 1.5rem;
}

 /* Timeline vertical line */
ul.timeline:before {
    content: ' ';
    background: #fff;
    display: inline-block;
    position: absolute;
    left: 16px;
    width: 4px;
    height: 100%;
    z-index: 400;
    border-radius: 1rem;
}

li.timeline-item {
    margin: 20px 0;
}

/* Timeline item arrow */
.timeline-arrow {
    border-top: 0.5rem solid transparent;
    border-right: 0.5rem solid #fff;
    border-bottom: 0.5rem solid transparent;
    display: block;
    position: absolute;
    left: 2rem;
}

/* Timeline item circle marker */
li.timeline-item::before {
    content: ' ';
    background: #ddd;
    display: inline-block;
    position: absolute;
    border-radius: 50%;
    border: 3px solid #fff;
    left: 11px;
    width: 14px;
    height: 14px;
    z-index: 400;
    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
}

/* Responsive */

/* Small devices (landscape phones, 576px and up) */
@media (min-width: 576px) {

}

/* Medium devices (tablets, 768px and up) */
@media (min-width: 768px) {
    .header-fix {
        padding-top: 129px;
    }

    .hero-title {
        font-size: 3.5rem;
    }

    .services-paragraph {
        min-height: 75px;
    }

    .hero-cart {
        position: absolute;
        -webkit-transform: scaleX(-1);
        transform: scaleX(-1);
        right: -60px;
        height: 100%;
        width: 510px;
    }

    .bg-large {
        min-height: 640px;
    }
}

/* Large devices (desktops, 992px and up) */
@media (min-width: 992px) {
    .header-fix {
        padding-top: 143px;
    }

    .logo-header {
        min-width: 126px;
        height: auto;
    }

    .hero-cart {
        position: absolute;
        -webkit-transform: scaleX(1);
        transform: scaleX(1);
        right: 5%;
        height: 100%;
    }
}

/* X-Large devices (large desktops, 1200px and up) */
@media (min-width: 1200px) {
    .hero-height {
        min-height: 700px;
    }
    .services-paragraph {
        min-height: 50px;
    }

    .hero-cart {
        position: absolute;
        -webkit-transform: scaleX(1);
        transform: scaleX(1);
        right: 5%;
        height: 100%;
        width: 761px;
    }
}

/* XX-Large devices (larger desktops, 1400px and up) */
@media (min-width: 1400px) {
    .gallery-item {
        min-height: 320px;
    }
}

@media (max-width:767px) {
    .hero-cart {
        max-width: 300px;
    }
    .bg-feature {
        flex: auto;
    }
}

@media (max-width:767px) {
    header {
      background-color: #212529;
    }
  }

